instructions.InstructionsDrawG.scala.code
droite()
baisseBrosse()
setCouleurBrosse(Blue)
avance(4)
gauche()
avance(4)
gauche()
avance(4)
gauche()
avance(2)
gauche()
avance()